# ATMplugin

./: README.md  envelopeextractor.cpp  envelopeextractor.h  envelopeextractordlg.cpp  envelopeextractordlg.h
qThrowMeasurement/: CMakeLists.txt  info.json  qThrowMeasurement.qrc
qThrowMeasurement/include/: ActionA.h  CMakeLists.txt  Clusters.h  HAC_Average.h  HierarchicalAgglomerativeClustering.h  LinearRegression.h  MatrixDistance.h  StatisticalTools.h  TreeNode.h  atmdialog.h  atmdisplayprofilesdlg.h  atmselectentitiesdlg.h  dppiecewiselinearregression.h  envelopeextractor.h  profileprocessor.h  qThrowMeasurement.h  qatmselectentitiesdlg.h  segmentlinearregression.h
qThrowMeasurement/src/: ActionA.cpp  CMakeLists.txt  Clusters.cpp  HAC_Average.cpp  LinearRegression.cpp  MatrixDistance.cpp  StatisticalTools.cpp  TreeNode.cpp  atmdialog.cpp  atmdisplayprofilesdlg.cpp  atmselectentitiesdlg.cpp  dppiecewiselinearregression.cpp  envelopeextractor.cpp  profileprocessor.cpp  qThrowMeasurement.cpp  qatmselectentitiesdlg.cpp  segmentlinearregression.cpp
qThrowMeasurement/ui/: CMakeLists.txt  atmdialog.ui  atmdisplayprofilesdlg.ui  atmselectentitiesdlg.ui  envelopeextractordlg.ui  qatmselectentitiesdlg.ui
